# Excel-To-Lang-Json-WASM

./: .gitignore  Cargo.toml  README.md  lib.js  package.json  testjs.js
example/as_vite_plugin/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
example/as_vite_plugin/scripts/: languageGenerate.ts  languageUpdate.ts
example/as_vite_plugin/src/: App.tsx
example/node/: .gitignore  index.js
node/: README.md  package.json  rust_project_bg.wasm
pkg/: README.md  rust_project.d.ts  rust_project.js  rust_project_bg.js  rust_project_bg.wasm.d.ts
src/: lib.rs
web/: README.md  package.json  rust_project.d.ts  rust_project.js  rust_project_bg.wasm
